syntax = "proto3";

package greet;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  // Unary API
  rpc Greet (GreetRequest)  returns (GreetResponse) {};
  // Server Streaming
  rpc GreetManyTimes (GreetRequest)  returns (stream GreetResponse) {};
  // Client Streaming
  rpc LongGreet (stream GreetRequest)  returns (GreetResponse) {};
  // Bidirectional
  rpc GreetEveryone (stream GreetRequest)  returns (stream GreetResponse) {};
}